# AllPairwiseComputation-MPI

./: ACADEMIC_DISCLAIMER.md  CMakeLists.txt  LICENSE  Makefile  README.md  all_pairwise.c  all_pairwise.h  main.c  test_all_pairwise.c  test_distributed.c
.github/workflows/: c-cpp.yml  mpi-ci.yml
